// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ValidatorRow /> renders 'active' Validators row with full data 1`] = `
<tr
  className="jsx-4079813474 table-row validator-nodes-row mx-0 "
>
  <td
    className="collapse-row-arrow"
    onClick={[Function]}
  >
    <img
      src="/static/images/icon-maximize.svg"
      style={
        Object {
          "width": "16px",
        }
      }
    />
  </td>
  <td
    className="order"
  >
    3
  </td>
  <td
    className="country-flag"
  >
    <img
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      src="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.4.3/flags/4x3/aq.svg"
      style={
        Object {
          "display": "inline-block",
          "height": "1em",
          "lineHeight": "14px",
          "verticalAlign": "middle",
          "width": "22px",
        }
      }
    />
  </td>
  <td>
    <div
      className="align-items-center row no-gutters"
    >
      <div
        className="validators-node-label col-2"
      >
        <span
          className="validating-label active badge"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          Active
        </span>
      </div>
      <div
        className="validator-name col"
      >
        <div
          className="row no-gutters"
        >
          <div
            className="validator-nodes-text col"
            title="@astro-stakers.poolv1.near"
          >
            astro-stakers.poolv1.near
          </div>
        </div>
        <div
          className="row no-gutters"
        >
          <div
            className="validator-nodes-text validator-node-pub-key col"
            title="ed25519:2nPSBCzjqikgwrqUMcuEVReJhmkC91eqJGPGqH9sZc28"
          >
            ed25519:2nPSBCzjqikgwrqUMcuEVReJhmkC91eqJGPGqH9sZc28
          </div>
        </div>
      </div>
    </div>
  </td>
  <td>
    1%
  </td>
  <td>
    1774
  </td>
  <td
    className="text-right validator-nodes-text stake-text"
  >
    <span
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      17,776,328
       
      NEAR
    </span>
    <br />
    <small>
      +
      <span
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        712
         
        NEAR
      </span>
    </small>
  </td>
  <td>
    <div
      className="jsx-1785419880 cumulative-stake-chart"
    >
      <div
        className="jsx-1785419880 total-value"
        style={
          Object {
            "width": "96.7%",
          }
        }
      />
      <div
        className="jsx-1785419880 current-value"
        style={
          Object {
            "width": "20.980000000000004%",
          }
        }
      />
      <div
        className="jsx-1785419880 cumulative-stake-label"
      >
        117.68%
      </div>
    </div>
  </td>
</tr>
`;

exports[`<ValidatorRow /> renders 'active' Validators row without 'poolDetails' 1`] = `
<tr
  className="jsx-4079813474 table-row validator-nodes-row mx-0 "
>
  <td
    className="collapse-row-arrow"
    onClick={[Function]}
  >
    <img
      src="/static/images/icon-maximize.svg"
      style={
        Object {
          "width": "16px",
        }
      }
    />
  </td>
  <td
    className="order"
  >
    2
  </td>
  <td
    className="country-flag"
  >
    <div
      style={
        Object {
          "backgroundColor": "#f0f0f1",
          "color": "#72727a",
          "fontSize": "8px",
          "lineHeight": "16px",
          "textAlign": "center",
          "width": "22px",
        }
      }
    >
      ?
    </div>
  </td>
  <td>
    <div
      className="align-items-center row no-gutters"
    >
      <div
        className="validators-node-label col-2"
      >
        <span
          className="validating-label active badge"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          Active
        </span>
      </div>
      <div
        className="validator-name col"
      >
        <div
          className="row no-gutters"
        >
          <div
            className="validator-nodes-text col"
            title="@bisontrails.poolv1.near"
          >
            bisontrails.poolv1.near
          </div>
        </div>
        <div
          className="row no-gutters"
        >
          <div
            className="validator-nodes-text validator-node-pub-key col"
            title="ed25519:Emk6wQJtpQZRJCvvPmmwP9GD2Pk37xxRpmb5uRvJpX62"
          >
            ed25519:Emk6wQJtpQZRJCvvPmmwP9GD2Pk37xxRpmb5uRvJpX62
          </div>
        </div>
      </div>
    </div>
  </td>
  <td>
    10%
  </td>
  <td>
    436
  </td>
  <td
    className="text-right validator-nodes-text stake-text"
  >
    <span
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      20,814,924
       
      NEAR
    </span>
    <br />
    <small>
      +
      <span
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        1,545
         
        NEAR
      </span>
    </small>
  </td>
  <td>
    <div
      className="jsx-1785419880 cumulative-stake-chart"
    >
      <div
        className="jsx-1785419880 total-value"
        style={
          Object {
            "width": "50.15%",
          }
        }
      />
      <div
        className="jsx-1785419880 current-value"
        style={
          Object {
            "width": "24.57%",
          }
        }
      />
      <div
        className="jsx-1785419880 cumulative-stake-label"
      >
        74.72%
      </div>
    </div>
  </td>
</tr>
`;

exports[`<ValidatorRow /> renders 'idle' Validators row with minimum data 1`] = `
<tr
  className="jsx-4079813474 table-row validator-nodes-row mx-0 "
>
  <td
    className="collapse-row-arrow"
    onClick={[Function]}
  >
    <img
      src="/static/images/icon-maximize.svg"
      style={
        Object {
          "width": "16px",
        }
      }
    />
  </td>
  <td
    className="order"
  >
    4
  </td>
  <td
    className="country-flag"
  >
    <div
      style={
        Object {
          "backgroundColor": "#f0f0f1",
          "color": "#72727a",
          "fontSize": "8px",
          "lineHeight": "16px",
          "textAlign": "center",
          "width": "22px",
        }
      }
    >
      ?
    </div>
  </td>
  <td>
    <div
      className="align-items-center row no-gutters"
    >
      <div
        className="validators-node-label col-2"
      >
        <span
          className="validating-label idle badge"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          Idle
        </span>
      </div>
      <div
        className="validator-name col"
      >
        <div
          className="row no-gutters"
        >
          <div
            className="validator-nodes-text col"
            title="@sphere.poolv1.near"
          >
            sphere.poolv1.near
          </div>
        </div>
      </div>
    </div>
  </td>
  <td>
    8%
  </td>
  <td>
    1
  </td>
  <td
    className="text-right validator-nodes-text stake-text"
  >
    <span
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      50
       
      NEAR
    </span>
  </td>
  <td>
    <div
      className="jsx-1785419880 cumulative-stake-chart"
    >
      <div
        className="jsx-1785419880 total-value"
        style={
          Object {
            "width": "0%",
          }
        }
      />
      <div
        className="jsx-1785419880 current-value"
        style={
          Object {
            "width": "0%",
          }
        }
      />
      <div
        className="jsx-1785419880 cumulative-stake-label"
      >
        N/A
      </div>
    </div>
  </td>
</tr>
`;

exports[`<ValidatorRow /> renders simple 'active' Validators row 1`] = `
Array [
  <tr
    className="jsx-4079813474 table-row validator-nodes-row mx-0 "
  >
    <td
      className="collapse-row-arrow"
      onClick={[Function]}
    >
      <img
        src="/static/images/icon-maximize.svg"
        style={
          Object {
            "width": "16px",
          }
        }
      />
    </td>
    <td
      className="order"
    >
      1
    </td>
    <td
      className="country-flag"
    >
      <div
        style={
          Object {
            "backgroundColor": "#f0f0f1",
            "color": "#72727a",
            "fontSize": "8px",
            "lineHeight": "16px",
            "textAlign": "center",
            "width": "22px",
          }
        }
      >
        ?
      </div>
    </td>
    <td>
      <div
        className="align-items-center row no-gutters"
      >
        <div
          className="validators-node-label col-2"
        >
          <span
            className="validating-label active badge"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            Active
          </span>
        </div>
        <div
          className="validator-name col"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="validator-nodes-text col"
              title="@staked.poolv1.near"
            >
              staked.poolv1.near
            </div>
          </div>
          <div
            className="row no-gutters"
          >
            <div
              className="validator-nodes-text validator-node-pub-key col"
              title="ed25519:3JBVXqenru2ErAM1kHQ8qfd29dCkURLd6JKrFgtmcDTZ"
            >
              ed25519:3JBVXqenru2ErAM1kHQ8qfd29dCkURLd6JKrFgtmcDTZ
            </div>
          </div>
        </div>
      </div>
    </td>
    <td>
      10%
    </td>
    <td>
      874
    </td>
    <td
      className="text-right validator-nodes-text stake-text"
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        42,476,926
         
        NEAR
      </span>
      <br />
      <small>
        +
        <span
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          108,628
           
          NEAR
        </span>
      </small>
    </td>
    <td>
      <div
        className="jsx-1785419880 cumulative-stake-chart"
      >
        <div
          className="jsx-1785419880 total-value"
          style={
            Object {
              "width": "0%",
            }
          }
        />
        <div
          className="jsx-1785419880 current-value"
          style={
            Object {
              "width": "50.14%",
            }
          }
        />
        <div
          className="jsx-1785419880 cumulative-stake-label"
        >
          50.14%
        </div>
      </div>
    </td>
  </tr>,
  <tr
    className="jsx-3940587247 cumulative-stake-holders-row"
  >
    <td
      className="jsx-3940587247 warning-text text-center"
      colSpan={8}
    >
      Validators 1 - 1 hold a cumulative stake above 33%. Delegating to the validators below improves the decentralization of the network.
    </td>
  </tr>,
]
`;
